k8s/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service
  namespace: default
spec:
  selector:
    app: devops
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
